Update Category to use Pageable instead of List